<resources>
    <string name="app_name">SQL + Jetpack Test</string>
    <string name="search">Search: </string>
    <string name="adicionar_contato">Adicionar Contato</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="salvar_contato">Salvar contato</string>
    <string name="remover_contato">Remover contato</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>